--- a/article_preview_component/index.html
+++ b/article_preview_component/index.html
@@ -47,13 +47,19 @@
           <i class="fas fa-share content__icon"></i>
           <div class="share">
             <p>SHARE</p>
-            <a href="https://www.facebook.com/" target="_blank"
+            <a
+              aria-label="facebook"
+              href="https://www.facebook.com/"
+              target="_blank"
               ><i class="fa fa-facebook-square" aria-hidden="true"></i>
             </a>
-            <a href="https://twitter.com/" target="_blank"
+            <a aria-label="twitter" href="https://twitter.com/" target="_blank"
               ><i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="https://www.pinterest.com/" target="_blank"
+            <a
+              aria-label="pinterest"
+              href="https://www.pinterest.com/"
+              target="_blank"
               ><i class="fa fa-pinterest" aria-hidden="true"></i>
             </a>
           </div>
