--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <a href="/article_preview_component/index.html">
       Article Preview Component</a
     >
+     <a href="/fylo-data-storage-component-master/dist">
+      Article Preview Component</a
+    >
   </body>
 </html>
