--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       Article Preview Component</a
     >
      <a href="/fylo-data-storage-component-master/dist">
-      Article Preview Component</a
+      Fylo Data Storage Component</a
     >
   </body>
 </html>
