removed unneceassary files

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Navigation: Frontend Mentor Challenges</title>
   </head>
   <body>
-    <a href="/article_preview_component/index.html">
+    <a
+      href="https://architadh.github.io/frontend-mentor-challenges//article_preview_component/index.html"
+    >
       Article Preview Component</a
     >
+    /article_preview_component/index.html
   </body>
 </html>
