--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Navigation: Frontend Mentor Challenges</title>
   </head>
   <body>
-    <a
-      href="https://architadh.github.io/frontend-mentor-challenges//article_preview_component/index.html"
-    >
+    <a href="/article_preview_component/index.html">
       Article Preview Component</a
     >
     <a href="/fylo-data-storage-component-master/dist">
