contetnt list updated

--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <title>Navigation: Frontend Mentor Challenges</title>
   </head>
   <body>
-    <a href="/article_preview_component/index.html">
-      Article Preview Component</a
-    >
-    <a href="/fylo-data-storage-component-master/dist">
-      Fylo Data Storage Component</a
-    >
+    <ul>
+      <li>
+        <a href="/article_preview_component/index.html">
+          Article Preview Component</a
+        >
+      </li>
+      <li>
+        <a href="/fylo-data-storage-component-master/dist">
+          Fylo Data Storage Component</a
+        >
+      </li>
+      <li>
+        <a href="/social-proof-section-master/dist"> Social Proof Section </a>
+      </li>
+    </ul>
   </body>
 </html>
