challenge navigation updated

--- a/index.html
+++ b/index.html
@@ -4,22 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navigation: Frontend Mentor Challenges</title>
+    <style>
+      .container {
+        max-width: 900px;
+        margin: 0 auto;
+        padding: 4rem;
+      }
+
+      li {
+        padding: 0.5rem;
+      }
+      a {
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
-    <ul>
-      <li>
-        <a href="/article_preview_component/index.html">
-          Article Preview Component</a
-        >
-      </li>
-      <li>
-        <a href="/fylo-data-storage-component-master/dist">
-          Fylo Data Storage Component</a
-        >
-      </li>
-      <li>
-        <a href="/social-proof-section-master/dist"> Social Proof Section </a>
-      </li>
-    </ul>
+    <div class="container">
+      <h1>Frontend Mentor Challenges</h1>
+      <ul>
+        <li>
+          <a href="/article_preview_component/index.html">
+            Article Preview Component</a
+          >
+        </li>
+        <li>
+          <a href="/fylo-data-storage-component-master/dist">
+            Fylo Data Storage Component</a
+          >
+        </li>
+        <li>
+          <a href="/social-proof-section-master/dist"> Social Proof Section </a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
