--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
         <li>
           <a href="/social-proof-section-master/dist"> Social Proof Section </a>
         </li>
+         <li>
+          <a href="/social-media-dashboard-with-theme-switcher-master/dist/"> Social Proof Section </a>
+        </li>
+         <li>
+          <a href="/fylo-landing-page-with-two-column-layout-master/dist/"> Social Proof Section </a>
+        </li>
       </ul>
     </div>
   </body>
