--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           <a href="/social-proof-section-master/dist"> Social Proof Section </a>
         </li>
          <li>
-          <a href="/social-media-dashboard-with-theme-switcher-master/dist/"> Social Proof Section </a>
+          <a href="/social-media-dashboard-with-theme-switcher-master/dist/"> Social Meida Dashboard ( with theme switcher ) </a>
         </li>
          <li>
-          <a href="/fylo-landing-page-with-two-column-layout-master/dist/"> Social Proof Section </a>
+          <a href="/fylo-landing-page-with-two-column-layout-master/dist/"> Fylo Landing Page </a>
         </li>
       </ul>
     </div>
