index being updated

--- a/index.html
+++ b/index.html
@@ -1,48 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navigation: Frontend Mentor Challenges</title>
-    <style>
-      .container {
-        max-width: 900px;
-        margin: 0 auto;
-        padding: 4rem;
-      }
-
-      li {
-        padding: 0.5rem;
-      }
-      a {
-        text-decoration: none;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Frontend Mentor Challenges</h1>
-      <ul>
-        <li>
-          <a href="/article_preview_component/index.html">
-            Article Preview Component</a
-          >
-        </li>
-        <li>
-          <a href="/fylo-data-storage-component-master/dist">
-            Fylo Data Storage Component</a
-          >
-        </li>
-        <li>
-          <a href="/social-proof-section-master/dist"> Social Proof Section </a>
-        </li>
-         <li>
-          <a href="/social-media-dashboard-with-theme-switcher-master/dist/"> Social Meida Dashboard ( with theme switcher ) </a>
-        </li>
-         <li>
-          <a href="/fylo-landing-page-with-two-column-layout-master/dist/"> Fylo Landing Page </a>
-        </li>
-      </ul>
-    </div>
-  </body>
-</html>
+<!-- revamping index -->
