--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!-- revamping index -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Frontend Mentor Projects</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Frontend Mentor Challenges</h1>
+      <ul id="list"></ul>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
+</html>
